--- a/css/responsive.css
+++ b/css/responsive.css
@@ -456,6 +456,68 @@
         font-size: 22px;
         font-family: 'Poppins'; 
     }
+    .container2>h1{
+        font-size: 30px;
+    }
+    .container2>p{
+        font-size: 14px;
+    }
+    .service-wraper{
+        max-width: 1450px;
+        width: 100%;
+    }
+    .vertical1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 120px;
+    }
+    .vertical2{
+        display: flex;
+        flex-direction: column;
+        margin-top: 0;
+        align-items: center;
+    }
+    .w1{
+        margin-bottom: 30px;
+    }
+    .w2{
+        margin-bottom: 30px;
+    }
+    .w3{
+        margin-bottom: 30px;
+    }
+    .w4{
+        margin-bottom: 30px;
+    }
+    .w5{
+        margin-bottom: 30px;
+    }
+    .box-wraper{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .box1{
+        width: 40%;
+        margin-right:50px;
+    }
+    .box2{
+        width: 40%;
+    }
+    .aa{
+        width: 40%;
+        margin-right:50px;
+    }
+    .bb{
+        width: 40%;
+        margin-right: 46px;
+    }
+    .background-wraper{
+        height: 800px;
+    }
+    .box-wraper{
+        height:800px
+    }
 }
 @media(max-width:1024px){
     .navigation{
@@ -474,7 +536,72 @@
     }
 }
 @media(max-width:900px){
-
+    .box1{
+        width:250px ;
+        height:200px ;
+    }
+    .box2{
+        width:250px ;
+        height:200px 
+    }
+    .box1>h1{
+        font-size: 40px;
+    }
+    .box1>p{
+        font-size: 20px;
+    }
+    .box2>h1{
+        font-size: 40px;
+    }
+    .box2>p{
+        font-size: 20px;
+    }
+    .container2>h1{
+        font-size: 25px;
+    }
+    .container2>p{
+        font-size: 10px;
+    }
+    .wordpress{
+        width: 380px;
+        height: 132.88px;
+    }
+    .html{
+        width: 380px;
+        height: 132.88px;
+    }
+    .icon-h2{
+        font-size: 18px;
+    }
+    .fa-html5{
+        font-size: 30px;
+    }
+    .fa-wordpress{
+        color: white;
+        font-size: 30px;
+    }
+    .fa-code{
+        font-size: 30px;
+        color: white;
+    }
+    .fa-css3-alt{
+        font-size: 30px;
+    }
+    .fa-puzzle-piece{
+        font-size: 30px;
+    }
+    .fa-laptop-code{
+        color: white;
+        font-size: 40px;
+    }
+    .icon-wraper1{
+        width: 77px;
+        height: 77px;
+    }
+    .icon-wraper2{
+        width: 77px;
+        height: 77px;
+    }
 }
 @media(max-width:800px){
     .img-man{
@@ -729,6 +856,37 @@
     }
     .calendar-divs{
         display: flex;
+    }
+}
+@media(max-width:620px){
+    .container2>h1{
+        font-size: 20px;
+    }
+    .container2>p{
+        font-size: 8px;
+    }
+    .box-wraper{
+        display: flex;
+        flex-direction: column;
+    }
+    .box1{
+        width: 200px;
+        height: 150px;
+        margin-bottom: 40px;
+    }
+    .box2{
+        width: 200px;
+        height: 150px;
+        margin-bottom: 40px;
+    }
+    .aa{
+        width: 200px;
+        height: 150px;
+    }
+    .bb{
+        width: 200px;
+        height: 150px;
+        margin-bottom: 0;
     }
 }
 @media(max-width:600px){
@@ -1183,6 +1341,46 @@
         height: 53px;
         font-size:15px;
     }
+    .wordpress{
+        width: 280px;
+        height: 100px;
+    }
+    .html{
+        width: 280px;
+        height: 100px;
+    }
+    .icon-h2{
+        font-size: 14px;
+    }
+    .fa-html5{
+        font-size: 20px;
+    }
+    .fa-wordpress{
+        color: white;
+        font-size: 20px;
+    }
+    .fa-code{
+        font-size: 20px;
+        color: white;
+    }
+    .fa-css3-alt{
+        font-size: 20px;
+    }
+    .fa-puzzle-piece{
+        font-size: 20px;
+    }
+    .fa-laptop-code{
+        color: white;
+        font-size: 20px;
+    }
+    .icon-wraper1{
+        width: 50px;
+        height: 50px;
+    }
+    .icon-wraper2{
+        width: 50px;
+        height: 50px;
+    }
 }
 @media(max-width:414px){
     .section2-img{
@@ -1422,5 +1620,28 @@
         font-size: 18px;
         color: white;
         font-family: 'Poppins';
+    }
+    .box1{
+        width: 200px;
+        height: 150px;
+        margin-bottom: 40px;
+        margin-left: 40px;
+    }
+    .box2{
+        width: 200px;
+        height: 150px;
+        margin-bottom: 40px;
+        margin-left: 40px;
+    }
+    .aa{
+        width: 200px;
+        height: 150px;
+        margin-left: 40px;
+    }
+    .bb{
+        width: 200px;
+        height: 150px;
+        margin-bottom: 0;
+        margin-left: 40px;
     }
 }
