--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@
     background-repeat: no-repeat;
     display: flex;
     position: absolute;
-    top: 119px;
+    top: 150px;
     right: 0;
 }
 .portfolio-wraper{
@@ -489,4 +489,96 @@
     color: white;
     font-size: 30px;
     font-family: 'Poppins';
+}
+.slider {
+    display: flex;
+    margin-top: 139px;
+}
+.slider .slider_item {
+    width: 1154px;
+    height: 629px;
+}
+.slider .slider_item img {
+    width: 150px;
+    height: 150px;
+    display: block;
+    object-fit: cover;
+    margin: 0 auto;
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 500px;
+}
+body {
+	background-color: red;
+	padding:30px;
+}
+.slick-h1{
+    color: white;
+    font-size: 40px;
+    font-family: 'Poppins';
+    text-align: center;
+    margin: 190px 0 20px;
+}
+.slick-p{
+    color: white;
+    font-size: 18px;
+    font-family: 'Poppins';
+    text-align: center;
+}
+.slider-wraper{
+    max-width: 1154px;
+    height: 629px;
+}
+.mask-div{
+    max-width: 1154px;
+    height:629px;
+    background: black;
+    position: relative;
+    margin: 0 auto;
+    display: flex;
+}
+.child-div{
+    max-width: 1154px;
+    width: 100%;
+    height: 504px;
+    background-color: #111111;
+    margin-top: 124px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.child-div>h1{
+    color:#FF4900;
+    font-size: 25px;
+    margin: 156px 0 5px;
+}
+.child-div>h2{
+    color:white;
+    font-size: 18px;
+    margin-bottom: 54px;
+}
+.child-div>p{
+    color:white;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.slick-dots li button:before{
+    font-family: 'slick';
+    font-size: 20px;
+    line-height: 20px;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    content: '•';
+    text-align: center;
+    opacity: .25;
+    color:#8C8CA5 ;
+    -webkit-font-smoothing: antialiased;
+}
+.slick-dots li.slick-active button:before {
+    opacity: .75;
+    color: #FF4900;
 }
