--- a/css/responsive.css
+++ b/css/responsive.css
@@ -534,8 +534,29 @@
     .logo{
         margin-left: 40px;
     }
+    .slider .slider_item img {
+        margin-left: 405px;
+    }
+    .slick-h1{
+        font-size: 30px;
+    }
+    .slick-p{
+        font-size: 14px;
+    }
 }
 @media(max-width:900px){
+    .section2-img{
+        position: unset;
+        max-width:650px;
+        width: 100%;
+    }
+    .man-effect{
+        max-width: 650px;
+        width: 100%;
+        height: 720px;
+        margin-top: 25px;
+        margin-left: 80px;
+    }
     .box1{
         width:250px ;
         height:200px ;
@@ -601,6 +622,24 @@
     .icon-wraper2{
         width: 77px;
         height: 77px;
+    }
+    .slider .slider_item img {
+        margin-left: 350px;
+    }
+    .slick-h1{
+        font-size: 25px;
+    }
+    .slick-p{
+        font-size: 12px;
+    }
+    .child-div>h1{
+        font-size: 20px;
+    }
+    .child-div>h2{
+        font-size: 14px;
+    }
+    .child-div>p{
+        font-size: 14px;
     }
 }
 @media(max-width:800px){
@@ -856,6 +895,84 @@
     }
     .calendar-divs{
         display: flex;
+    }
+    .slider .slider_item img {
+        margin-left: 240px;
+    }
+    .slick-h1{
+        font-size: 20px;
+    }
+    .slick-p{
+        font-size: 10px;
+    }
+    .child-div>h1{
+        font-size: 15px;
+    }
+    .child-div>h2{
+        font-size: 10px;
+    }
+    .child-div>p{
+        font-size: 10px;
+    }
+    .mask-div{
+        max-width: 600px;
+        height:300px;
+    }
+    .child-div{
+        max-width: 600px;
+        width: 100%;
+        height: 400px;
+    }
+    .slick-dots li button:before{
+        top: 0;
+    }
+}
+@media(max-width:767px){
+    .slider .slider_item img {
+        margin-left: 150px;
+    }
+    .slick-h1{
+        font-size: 18px;
+    }
+    .slick-p{
+        font-size: 8px;
+    }
+    .child-div>h1{
+        font-size: 13px;
+    }
+    .child-div>h2{
+        font-size: 8px;
+    }
+    .child-div>p{
+        font-size: 8px;
+    }
+    .mask-div{
+        max-width: 400px;
+        height:250px;
+    }
+    .child-div{
+        max-width: 400px;
+        width: 100%;
+        height: 370px;
+    }
+    .slider .slider_item {
+        height: 550px;
+    }
+    .slider .slider_item img {
+        width: 120px;
+        height: 120px;
+        display: block;
+        object-fit: cover;
+        margin: 0 auto;
+        position: absolute;
+        margin-top: 50px;
+        margin-left: 150px;
+    }
+}
+@media(max-width:626px){
+    .section2-img{
+        max-width:460px;
+        width: 100%;
     }
 }
 @media(max-width:620px){
@@ -1127,6 +1244,18 @@
     .container1{
         margin-top: 100px;
     }
+    .slick-h1{
+        font-size: 16px;
+    }
+    .slick-p{
+        font-size: 6px;
+    }
+}
+@media(max-width:507px){
+    .section2-img{
+        max-width:340px;
+        width: 100%;
+    }
 }
 @media(max-width:480px){
     .img-man{
@@ -1217,7 +1346,7 @@
         font-size: 12px;
     }
     .section2-img{
-        max-width: 290px;
+        max-width: 260px;
         width: 100%;
     }
     .calendar-wraper{
@@ -1328,7 +1457,8 @@
         max-width: 260px;
         width: 100%;
         display: flex;
-        margin-top: 80px;    }
+        margin-top: 80px;    
+    }
     .hire{
         width: 120px;
         height: 53px;
@@ -1381,10 +1511,45 @@
         width: 50px;
         height: 50px;
     }
+    .mask-div{
+        max-width: 300px;
+        height:200px;
+    }
+    .child-div{
+        max-width: 300px;
+        width: 100%;
+        height: 300px;
+    }
+    .child-div>h1{
+        font-size: 10px;
+        margin-top: 100px;
+    }
+    .child-div>h2{
+        font-size: 6px;
+    }
+    .child-div>p{
+        font-size: 6px;
+    }
+    .slider .slider_item {
+        height: 450px;
+    }
+    .slider .slider_item img {
+        width: 100px;
+        height: 100px;
+        display: block;
+        object-fit: cover;
+        margin: 0 auto;
+        position: absolute;
+        margin-top: 50px;
+        margin-left: 110px;
+    }
+    .slick-p{
+        font-size: 4px;
+    }
 }
 @media(max-width:414px){
     .section2-img{
-        max-width: 260px;
+        max-width: 230px;
         width: 100%;
     }
     .calendar-wraper{
@@ -1397,7 +1562,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1580px;
+        top: 1560px;
     }
     .skills{
         max-width: 300px;
@@ -1577,7 +1742,7 @@
         font-size: 10px;
     }
     .section2-img{
-        max-width: 230px;
+        max-width: 200px;
         width: 100%;
         margin-left: 50px;
     }
@@ -1591,7 +1756,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1410px;
+        top: 1395px;
         max-width: 80px;
         width: 100%;
         height: 70px;
@@ -1643,5 +1808,23 @@
         height: 150px;
         margin-bottom: 0;
         margin-left: 40px;
+    }
+    .child-div>p{
+        font-size: 4px;
+    }
+    .slider .slider_item img {
+        width: 100px;
+        height: 100px;
+        display: block;
+        object-fit: cover;
+        margin: 0 auto;
+        position: absolute;
+        margin-top: 50px;
+        margin-left: 105px;
+    }
+}
+@media(max-width:320px){
+    .slider .slider_item img {
+        margin-left: 80px;
     }
 }
