--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
+    position: fixed;
+    z-index: 200;
+    top: 0;
 }
 .logo{
     margin-top: 30px;
@@ -59,7 +62,7 @@
     background-repeat: no-repeat;
     display: flex;
     position: absolute;
-    top: 150px;
+    top: 120px;
     right: 0;
 }
 .portfolio-wraper{
@@ -179,7 +182,7 @@
     background-color: #111111;
     border-radius: 10px;
     position: absolute;
-    top: 1965px;
+    top: 1880px;
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
@@ -466,9 +469,29 @@
     flex-direction: column;  
     align-items: center;
     justify-content: center;
-}
-.box2:not(.bb){
     margin-right: 46px;
+}
+.box3{
+    width:328px ;
+    height:256px ;
+    background-color: #111111;
+    border: 1px dashed #707070;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;  
+    align-items: center;
+    justify-content: center;
+    margin-right: 46px;
+}
+.box4{
+    width:328px ;
+    height:256px ;
+    background-color: #FF4900;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;  
+    align-items: center;
+    justify-content: center;
 }
 .box1>h1{
     color: white;
@@ -486,6 +509,26 @@
     font-family: 'Poppins';
 }
 .box2>p{
+    color: white;
+    font-size: 30px;
+    font-family: 'Poppins';
+}
+.box3>h1{
+    color: white;
+    font-size: 50px;
+    font-family: 'Poppins';
+}
+.box3>p{
+    color: white;
+    font-size: 30px;
+    font-family: 'Poppins';
+}
+.box4>h1{
+    color: white;
+    font-size: 50px;
+    font-family: 'Poppins';
+}
+.box4>p{
     color: white;
     font-size: 30px;
     font-family: 'Poppins';
