--- a/css/responsive.css
+++ b/css/responsive.css
@@ -503,14 +503,14 @@
     }
     .box2{
         width: 40%;
+        margin-right: 0;
     }
-    .aa{
+    .box3{
         width: 40%;
         margin-right:50px;
     }
-    .bb{
+    .box4{
         width: 40%;
-        margin-right: 46px;
     }
     .background-wraper{
         height: 800px;
@@ -563,7 +563,15 @@
     }
     .box2{
         width:250px ;
-        height:200px 
+        height:200px ;
+    }
+    .box3{
+        width:250px ;
+        height:200px ;
+    }
+    .box4{
+        width:250px ;
+        height:200px ;
     }
     .box1>h1{
         font-size: 40px;
@@ -575,6 +583,18 @@
         font-size: 40px;
     }
     .box2>p{
+        font-size: 20px;
+    }
+    .box3>h1{
+        font-size: 40px;
+    }
+    .box3>p{
+        font-size: 20px;
+    }
+    .box4>h1{
+        font-size: 40px;
+    }
+    .box4>p{
         font-size: 20px;
     }
     .container2>h1{
@@ -969,6 +989,8 @@
         margin-left: 150px;
     }
 }
+@media(max-width:672px){
+}
 @media(max-width:626px){
     .section2-img{
         max-width:460px;
@@ -989,21 +1011,23 @@
     .box1{
         width: 200px;
         height: 150px;
-        margin-bottom: 40px;
+        margin: 40px 0 40px;
     }
     .box2{
         width: 200px;
         height: 150px;
         margin-bottom: 40px;
     }
-    .aa{
+    .box3{
         width: 200px;
         height: 150px;
+        margin-bottom: 40px;
+        margin-right: 0;
     }
-    .bb{
+    .box4{
         width: 200px;
         height: 150px;
-        margin-bottom: 0;
+        margin-bottom: 40px;
     }
 }
 @media(max-width:600px){
@@ -1548,6 +1572,9 @@
     }
 }
 @media(max-width:414px){
+    .man-effect{
+        margin-left: 30px;
+    }
     .section2-img{
         max-width: 230px;
         width: 100%;
@@ -1660,7 +1687,7 @@
         width: 100%;
         height: 300px;
         margin-top:-5px;
-        margin-left: 35px;
+        margin-left: 30px;
     }
     .section1-wraper{
         margin-top: 100px;
@@ -1790,24 +1817,11 @@
         width: 200px;
         height: 150px;
         margin-bottom: 40px;
-        margin-left: 40px;
     }
     .box2{
         width: 200px;
         height: 150px;
         margin-bottom: 40px;
-        margin-left: 40px;
-    }
-    .aa{
-        width: 200px;
-        height: 150px;
-        margin-left: 40px;
-    }
-    .bb{
-        width: 200px;
-        height: 150px;
-        margin-bottom: 0;
-        margin-left: 40px;
     }
     .child-div>p{
         font-size: 4px;
@@ -1826,5 +1840,8 @@
 @media(max-width:320px){
     .slider .slider_item img {
         margin-left: 80px;
+    }
+    .man-effect{
+        margin-left: 2px;
     }
 }
