--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,7 +3,7 @@
         max-width: 800px;
         width: 100%;
         height: 850px;
-        top: 150px;
+        top: 120px;
         right: 0;
     }
     .man-effect{
@@ -104,7 +104,7 @@
         width: 100%;
         height: 185px;
         position: absolute;
-        top: 1900px;
+        top: 1780px;
     }
     .h1-06{
         width: 140px;
@@ -334,7 +334,7 @@
     }
     .calendar{
         position: absolute;
-        top: 2310px;
+        top: 2200px;
         max-width: 252px;
         width: 100%;
         height: 233px;
@@ -661,6 +661,9 @@
     .child-div>p{
         font-size: 14px;
     }
+    .calendar{
+        top: 2150px;
+    }
 }
 @media(max-width:800px){
     .img-man{
@@ -771,7 +774,7 @@
         background-color: #111111;
         border-radius: 10px;
         position: absolute;
-        top: 1965px;
+        top: 1830px;
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
@@ -1128,7 +1131,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1680px;
+        top: 1550px;
         max-width: 140px;
         width: 100%;
         height: 120px;
@@ -1280,6 +1283,9 @@
         max-width:340px;
         width: 100%;
     }
+    .calendar{
+        top: 1530px;
+    }
 }
 @media(max-width:480px){
     .img-man{
@@ -1383,7 +1389,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1600px;
+        top: 1450px;
         max-width: 100px;
         width: 100%;
         height: 90px;
@@ -1667,6 +1673,9 @@
         height:43px;
         font-size:13px;
     }
+    .calendar{
+        top: 1420px;
+    }
 }
 @media(max-width:375px){
     .logo{
@@ -1783,7 +1792,7 @@
     }
     .calendar{
         position: absolute;
-        top: 1395px;
+        top: 1250px;
         max-width: 80px;
         width: 100%;
         height: 70px;
