--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+.body{
+    background-color: black;
+}
 .header{
     background-color: #000000;
     width: 100%;
@@ -18,6 +21,10 @@
     color: white;
     margin-right: 52px;
     margin-top: 70px;
+    font-family: 'Poppins';
+}
+.aa{
+    color: white;
     font-family: 'Poppins';
 }
 .nav-li-wraper{
@@ -547,10 +554,6 @@
     margin-top: 50px;
     margin-left: 500px;
 }
-body {
-	background-color: red;
-	padding:30px;
-}
 .slick-h1{
     color: white;
     font-size: 40px;
@@ -620,4 +623,10 @@ body {
 .slick-dots li.slick-active button:before {
     opacity: .75;
     color: #FF4900;
+}
+.footer{
+    width: 100%;
+    height: 983px;
+    background-color: #060606;
+    margin-top: 161px;
 }
